RESOLVED FIXED279086
[WebGPU] RenderBundleEncoder fails to replay commands on invalid encoder
https://bugs.webkit.org/show_bug.cgi?id=279086
Summary [WebGPU] RenderBundleEncoder fails to replay commands on invalid encoder
Mike Wyrzykowski
Reported 2024-09-03 14:57:56 PDT
[WebGPU] RenderBundleEncoder fails to replay commands on invalid encoder
Attachments
Mike Wyrzykowski
Comment 1 2024-09-03 15:06:20 PDT
Mike Wyrzykowski
Comment 2 2024-09-03 15:12:42 PDT
EWS
Comment 3 2024-09-05 19:37:42 PDT
Committed 283245@main (46279b29a3cc): <https://commits.webkit.org/283245@main> Reviewed commits have been landed. Closing PR #33087 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.