[WebGPU] RenderBundleEncoder fails to replay commands on invalid encoder https://bugs.webkit.org/show_bug.cgi?id=279086 rdar://135198220

Reviewed by Dan Glastonbury.

We were not handling OOM situations in the ICB path leading to incorrect
command encoding in OOM situations.

* LayoutTests/fast/webgpu/nocrash/fuzz-279086-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-279086.html: Added.
* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::endCurrentICB):

* LayoutTests/TestExpectations
Test appears to crash outside of macOS Sequoia due to failed ICB allocation.
On macOS Sequoia the allocation fails gracefully which allows the test to
pass.

Canonical link: https://commits.webkit.org/283245@main